# otus5_matrix

./: CMakeLists.txt  CMakeLists_8txt.html  Doxyfile  Makefile  README.md  annotated.html  classMIterator-members.html  classMIterator.html  classMatrix-members.html  classMatrix.html  classProxyObject-members.html  classProxyObject.html  classes.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  main.cpp  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  matrix.h  matrix_8h.html  matrix_8h__dep__incl.map  matrix_8h__dep__incl.md5  matrix_8h__incl.map  matrix_8h__incl.md5  matrix_8h_source.html  structElement-members.html  structElement.html  structElement__coll__graph.map  structElement__coll__graph.md5  structKey-members.html  structKey.html  test.cpp  test_8cpp.html  (+2 more)
.github/workflows/: release.yml
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  related_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
